--- a/KayReader/app/views/categories/index.html.erb
+++ b/KayReader/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 #coding: utf-8
-<%= image_tag("images/logo.jpeg",:id => 'logo_img')%>
+<%= image_tag("logo.jpeg",:id => 'logo_img',:size => "260")%>
 <table>
 <% @categories.each do |category| %>
   <tr>
