--- a/KayReader/app/views/sites/_form.html.erb
+++ b/KayReader/app/views/sites/_form.html.erb
@@ -23,6 +23,10 @@
   	<%= f.label :rssurl %><br />
   	<%= f.text_field :rssurl %>
   </div>
+  <div class="field">
+  	Category<br />
+  	<%= select_tag('category',options_from_collection_for_select(@categories,:id,:name)) %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
